# naru

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tracer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  exit_codes.md  releasing.md  spec.md  threat_model.md
docs/adr/: 0001-lineage-carrier.md  0002-header-detection.md  0003-transform-loading.md  0004-excel-mirror-region-offset.md
examples/counterparty_mirror/: README.md  client_statement_renamed_column.xlsx  fingerprint.json  mapping.yaml  schema.py  warehouse_fingerprint.json
pipelines/ust_auction_results/v1/: CHANGELOG.md  fingerprint.json  manifest.yaml  schema.py  transform.py  validations.yaml
recipes/counterparty_mirror/: positions_by_counterparty.sql
recipes/ust_auction_results/: auction_tail.sql  weak_demand_auctions.sql
scripts/: demo_mirror.py  refreeze.py
src/naru/: __init__.py  __main__.py  artifact.py  cli.py  fingerprint.py  goldenharness.py  lint.py  map_suggest.py  mapping.py  mirror.py  ops.py  profiler.py  query.py  runtime.py  sources.py  store.py  validations.py
tests/: test_artifact.py  test_cli.py  test_drift.py  test_end_to_end.py  test_examples.py  test_fingerprint.py  test_goldenharness.py  test_lint.py  test_main.py  test_map_suggest.py  test_mapping.py  test_mirror.py  test_ops.py  test_profiler.py  test_query.py  test_recipes.py  test_refreeze.py  test_runtime.py  test_smoke.py  test_sources.py  test_store.py  test_tracer_golden.py  test_ust_auction_results_artifact.py  test_validations.py
tests/fixtures/: client_statement.xlsx  h1_merged_headers.xlsx  h2_two_tables.xlsx  h3_date_ambiguity.xlsx  h4_units_in_header.xlsx  h5_buried_header.xlsx  ust_lite.xlsx  warehouse_workbook.xlsx
tests/fixtures/generators/: make_client_statement.py  make_h1_merged_headers.py  make_h2_two_tables.py  make_h3_date_ambiguity.py  make_h4_units_in_header.py  make_h5_buried_header.py  make_ust_lite.py  make_warehouse_workbook.py
tests/golden/: tracer_expected.parquet
tests/golden/profiles/: h1_merged_headers.json  h2_two_tables.json  h3_date_ambiguity.json  h4_units_in_header.json  h5_buried_header.json  ust_lite.json
