[project]
name = "naru"
version = "0.0.1.dev0"
description = "Deterministic pipeline artifacts for messy financial data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
    "pydantic>=2",
    "sqlalchemy",
    "typer",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naru"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# transform.py files run inside naru.artifact's exec() sandbox (docs/adr/
# 0003-transform-loading.md), where `ops` is injected as a namespace
# global rather than imported -- not a real F821 undefined-name error.
"pipelines/**/transform.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["openpyxl.*", "pandas.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
