[project]
# Distribution name on PyPI -- "naru" was already taken (see docs/spec.md's
# own header note, which pre-registered this exact fallback). The Python
# import name, the "naru" CLI command, and everything else in this project
# stay "naru" -- only the `pip install <name>` name is different.
name = "naru-data"
version = "0.1.0"
description = "Deterministic pipeline artifacts for messy financial data: compile-time intelligence, run-time determinism"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Zinuo A Shi", email = "168945244+ZinuoS@users.noreply.github.com" },
]
keywords = [
    "naru",
    "excel",
    "etl",
    "data-pipeline",
    "data-engineering",
    "sqlite",
    "financial-data",
    "deterministic",
    "lineage",
    "data-lineage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas",
    "openpyxl",
    "pydantic>=2",
    "sqlalchemy",
    "typer",
    "pyyaml",
    # naru.goldenharness.run_golden_test (naru test) reads golden/
    # expected_output.parquet via pd.read_parquet, which pandas cannot do
    # on its own -- a real runtime dependency of the CLI, not a dev-only
    # test-suite concern. Caught by actually installing the built wheel
    # into a fresh venv and running `naru test`, not by reading the code.
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/ZinuoS/naru-data"
Source = "https://github.com/ZinuoS/naru-data"
Issues = "https://github.com/ZinuoS/naru-data/issues"
Changelog = "https://github.com/ZinuoS/naru-data/blob/main/CHANGELOG.md"

[project.scripts]
naru = "naru.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naru"]
exclude = ["**/__pycache__", "**/*.py[cod]"]

# The worked examples (pipelines/, examples/) and query recipes (recipes/)
# are real, runnable artifacts, not just repo-browsing material -- Task 1.4
# of the packaging pass runs them from a pip-installed wheel in a fresh venv
# with no repo checked out beside it, so they have to ship as package data,
# not live only at the repo root. Discoverable post-install via
# importlib.resources.files("naru") / "_examples" / "pipelines" / ...
[tool.hatch.build.targets.wheel.force-include]
"pipelines" = "naru/_examples/pipelines"
"examples" = "naru/_examples/examples"
"recipes" = "naru/_examples/recipes"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# transform.py files run inside naru.artifact's exec() sandbox (docs/adr/
# 0003-transform-loading.md), where `ops` is injected as a namespace
# global rather than imported -- not a real F821 undefined-name error.
"pipelines/**/transform.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["openpyxl.*", "pandas.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
